# ginpee

./: .gitignore  .gpskip  Cargo.toml  LICENSE  README.md  flake.nix  ginpee.toml
src/: collector.rs  config.rs  formatter.rs  init.rs  lib.rs  main.rs  writer.rs
tests/: integration_test.rs
