[package]
name = "ginpee"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
ignore = "0.4"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "ginpee"
path = "src/main.rs"